# titan-browser

./: .gclient  .gclient-linux  .gclient-mac  .gclient-windows  .gitignore  .gitmodules  README.md  args-linux.gn  args-mac.gn  args-windows.gn  args.gn  build-android-fast.sh  build-linux.sh  build.sh  colab-runner.ipynb  patch-desktop.sh  patch.sh
.github/workflows/: build-android.yml  build-linux.yml  build-mac.yml  build-windows.yml  build.yml
fastlane/metadata/android/en-US/: short_description.txt
res/: icon.sh
res/drawable/: themed_app_icon.xml
titanium/chromium_src/chrome/android/: chrome_java_titan_sources.gni
titanium/chromium_src/chrome/android/java/src/org/chromium/chrome/browser/: IsolatedTabGroupManager.java  IsolatedTabMenuHelper.java
titanium/chromium_src/chrome/browser/titan/: isolated_profile_manager.cc  isolated_profile_manager.h
